[project]
name = "ahc-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kyohei Uto", email = "h27.kubb@gmail.com" }
]
dependencies = [
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
    "ipykernel>=6.29.5",
    "networkx>=3.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "plotly>=5.23.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahc_template"]
