[project]
name = "ahc-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ipykernel>=6.29.5",
  "mypy>=1.11.2",
  "nbformat>=5.10.4",
  "optuna>=4",
  "pandas>=2.2.2",
  "polars>=1.7.1",
  "pre-commit>=3.8",
  "pyarrow>=17",
  "pydantic>=2.7.4",
  "pytest>=8.3.3",
  "rich>=13.8.1",
  "ruff>=0.6.5",
  "scikit-learn>=1.5.2",
  "seaborn>=0.13.2",
  "streamlit>=1.38",
]

[tool.ruff]
extend-include = ["*.ipynb"]

